--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,7 +16,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", :id => 'title_header', movies_path %></th>
+      <th>Movie Title</th>
       <th>Rating</th>
       <th>{class: @date_header_class}= link_to 'Release Date', movies_path(sort: 'release_date'), id: 'release_date_header'
       <th>More Info</th>
