--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
     <tr>
       <%= link_to "Movie Title", :id => 'title_header', movies_path %>
       <th>Rating</th>
-      <th>{class: @date_header_class}= link_to 'Release Date', movies_path(sort: 'release_date'), id: 'release_date_header'
+      <th>Release Date</th>
       <th>More Info</th>
     </tr>
   </thead>
