--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,7 +16,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", :id => 'title_header', movies_path %>
+      <%= link_to "Movie Title",  movies_path, :id => 'title_header' %>
       <th>Rating</th>
       <th>Release Date</th>
       <th>More Info</th>
