--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title",  movies_path(sort: 'title'), :id => 'title_header' %></th>
+      <th><%= link_to "Movie Title",  movies_path(sort: 'title', ratings: @ratings_to_show), :id => 'title_header' %></th>
       <th>Rating</th>
-      <th><%= link_to "Release Date",  movies_path(sort: 'release_date'), :id => 'release_date_header' %></th>
+      <th><%= link_to "Release Date",  movies_path(sort: 'release_date', ratings: @ratings_to_show), :id => 'release_date_header' %></th>
       <th>More Info</th>
     </tr>
   </thead>
