--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
     <tr>
       <th><%= link_to "Movie Title",  movies_path(sort: 'title', ratings: Hash[@ratings_to_show.map {|rating| [rating, rating]}]), :id => 'title_header' %></th>
       <th>Rating</th>
-      <th><%= link_to "Release Date",  movies_path(sort: 'release_date'), :id => 'release_date_header' %></th>
+      <th><%= link_to "Release Date",  movies_path(sort: 'release_date', ratings: Hash[@ratings_to_show.map {|rating| [rating, rating]}]), :id => 'release_date_header' %></th>
       <th>More Info</th>
     </tr>
   </thead>
