--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
 <h2>All Movies</h2>
 
 <%#  Part 1: Start here... %>
-<%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
+<%= form_tag movies_path(sort: @sort), method: :get, id: 'ratings_form' do %>
   Include:
   <% @all_ratings.each do |rating| %>
     <div class="form-check  form-check-inline">
